# stepfunction

./: AWS Step Functions for Microservice Orchestration.pptx  README.md
lambda-trigger-ecs-tasks/: .gitignore  README.md  pyproject.toml
lambda-trigger-ecs-tasks/src/trigger-ecs/: trigger-ecs.py
store-specific-task/: Dockerfile  pom.xml
store-specific-task/src/main/java/com/example/store_specific_task/: StoreSpecificTask.java  StoreSpecificTaskApplication.java
store-specific-task/src/main/resources/: application.properties
store-specific-task/src/test/java/com/example/store_specific_task/: StoreSpecificTaskApplicationTests.java  TestStoreSpecificTaskApplication.java  TestcontainersConfiguration.java
trigger-ecs-tasks/: README.md  step-function.json  store_ranges.csv
trigger-ecs-tasks/data-for-automation/: MyStateMachine-1a4rk0l2u.asl.json  hello-world.yaml  role-details  strore-specific-task-1-revision2.json  strore-specific-task-revision2.json  trigger-ecs-tasks.yaml
